[metadata]
name = colcon-acceleration
version = attr: colcon_acceleration.__version__
url = https://colcon.readthedocs.io
# project_urls =
#     Changelog = https://github.com/colcon/colcon-acceleration/milestones?direction=desc&sort=due_date&state=closed
#     GitHub = https://github.com/colcon/colcon-acceleration/
author = Víctor Mayoral Vilches
author_email = victorma@xilinx.com
maintainer = Víctor Mayoral Vilches
maintainer_email = victorma@xilinx.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to include hardware acceleration
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  colcon-core>=0.5.2
packages = find:
tests_require =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2
zip_safe = true

[tool:pytest]
filterwarnings =
    error
junit_suite_name = colcon-acceleration

[options.entry_points]
colcon_core.verb =
    acceleration = colcon_acceleration.verb.acceleration:AccelerationVerb

colcon_acceleration.subverb =
    board = colcon_acceleration.subverb.board:BoardSubverb
    emulation = colcon_acceleration.subverb.emulation:EmulationSubverb
    hls = colcon_acceleration.subverb.hls:HLSSubverb
    hypervisor = colcon_acceleration.subverb.hypervisor:HypervisorSubverb
    kernel = colcon_acceleration.subverb.kernel:KernelSubverb
    mkinitramfs = colcon_acceleration.subverb.mkinitramfs:MkinitramfsSubverb
    mount = colcon_acceleration.subverb.mount:MountSubverb
    platform = colcon_acceleration.subverb.platform:PlatformSubverb
    umount = colcon_acceleration.subverb.umount:UmountSubverb
    version = colcon_acceleration.subverb.version:VersionSubverb
    v++ = colcon_acceleration.subverb.vpp:VppSubverb

[flake8]
import-order-style = google
