[metadata]
name = colcon-hardware-acceleration
version = attr: colcon_hardware_acceleration.__version__
url = https://colcon.readthedocs.io
project_urls =
    GitHub = https://github.com/ros-acceleration/colcon-hardware-acceleration
    Changelog = https://github.com/ros-acceleration/colcon-hardware-acceleration/blob/main/CHANGELOG.rst
author = Víctor Mayoral-Vilches
author_email = victor@accelerationrobotics.com
maintainer = Víctor Mayoral-Vilches
maintainer_email = victor@accelerationrobotics.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to include hardware acceleration
long_description = file: README.md
keywords = colcon

[options]
install_requires =
  colcon-core>=0.7.1
packages = find:
zip_safe = true

[options.extras_require]
test =
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2

[tool:pytest]
filterwarnings =
    error
    # Suppress deprecation warnings in other packages
    ignore:lib2to3 package is deprecated::scspell
junit_suite_name = colcon-hardware-acceleration

[options.entry_points]
colcon_core.extension_point =
    colcon_hardware_acceleration.subverb = colcon_hardware_acceleration.subverb:AccelerationSubverbExtensionPoint

colcon_core.verb =
    acceleration = colcon_hardware_acceleration.verb.acceleration:AccelerationVerb
colcon_hardware_acceleration.subverb =
    board = colcon_hardware_acceleration.subverb.board:BoardSubverb
    emulation = colcon_hardware_acceleration.subverb.emulation:EmulationSubverb
    hls = colcon_hardware_acceleration.subverb.hls:HLSSubverb
    hypervisor = colcon_hardware_acceleration.subverb.hypervisor:HypervisorSubverb
    linux = colcon_hardware_acceleration.subverb.linux:LinuxSubverb
    list = colcon_hardware_acceleration.subverb.list:ListSubverb
    mkinitramfs = colcon_hardware_acceleration.subverb.mkinitramfs:MkinitramfsSubverb
    mount = colcon_hardware_acceleration.subverb.mount:MountSubverb
    platform = colcon_hardware_acceleration.subverb.platform:PlatformSubverb
    select = colcon_hardware_acceleration.subverb.select:SelectSubverb
    umount = colcon_hardware_acceleration.subverb.umount:UmountSubverb
    version = colcon_hardware_acceleration.subverb.version:VersionSubverb
    v++ = colcon_hardware_acceleration.subverb.vpp:VppSubverb
